# apple-battery-guard

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  README.pt.md
config/: apple-battery-guard.toml  auto-cpufreq.conf  mbpfan.conf  tlp-macbook.conf
packaging/: .SRCINFO  PKGBUILD  apple-battery-guard.install
scripts/: setup-kernel-module.sh  setup-power.sh
src/: battery.rs  config.rs  daemon.rs  main.rs  systemd.rs  tui.rs
systemd/: apple-battery-guard.service
